--- a/Web/Views/Account/Login.cshtml
+++ b/Web/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LoginViewModel
 
 <div class="row">
-    <div class="medium-12 columns">
+    <div class="medium-offset-3 medium-6 columns end">
         <h2>Logga in</h2>
         @if (Model.Errors != null)
         {
