--- a/Web/Views/Profile/Index.cshtml
+++ b/Web/Views/Profile/Index.cshtml
@@ -11,14 +11,16 @@
             <tr>
                 <th style="min-width: 140px;">Inskickat</th>
                 <th>Nätverk</th>
+                <th>Författare</th>
                 <th>Text</th>
                 <th style="min-width: 140px;">Kategorier</th>
             </tr>
             @foreach (var hate in Model.HateList)
             {
                 <tr>
-                    <td>@hate.Created.ToString("yyyy-MM-dd hh:mm")</td>
+                    <td>@hate.Created.ToString("yyyy-MM-dd HH:mm")</td>
                     <td>@hate.Network</td>
+                    <td>@hate.Author</td>
                     <td>@hate.Text</td>
                     <td>@string.Join(", ", hate.Categories)</td>
                 </tr>
@@ -26,7 +28,7 @@
         </table>
         @if (Model.ShowPrev)
         {
-            <a href="~/Profile/Index/@Model.HateList.First().Id?dir=1">Föregående Sida</a>
+            <a href="~/Profile?hateid=@Model.HateList.First().Id?dir=1">Föregående Sida</a>
         }
         @if (Model.ShowPrev && Model.ShowNext)
         {
@@ -34,7 +36,7 @@
         }
         @if (Model.ShowNext)
         {
-            <a href="~/Profile/Index/@Model.HateList.Last().Id">Nästa Sida</a>
+            <a href="~/Profile?hateid=@Model.HateList.Last().Id">Nästa Sida</a>
         }
     </div>
 </div>
