--- a/Web/Views/Shared/_AdminLayout.cshtml
+++ b/Web/Views/Shared/_AdminLayout.cshtml
@@ -5,6 +5,7 @@
     <title>The Hate Bin</title>
     <link href="~/Content/css/normalize.css" rel="stylesheet" />
     <link href="~/Content/css/foundation.min.css" rel="stylesheet" />
+    <link href="~/Content/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Content/css/main.css" rel="stylesheet" />
 </head>
 <body>
